//Please keep alphabetical :-)

dist_default_DATA = \
  applications.png \
  dash_background.png \
  favourites.png \
  files.png \
  gradient.png \
  home.png \
  honeycomb.png \
  honeycomb-mask.png \
  maximize_up.png \
  minimize_up.png \
  quicklauncher_focused_indicator.png \
  quicklauncher_running_indicator.png \
  software_centre.png \
  tight_check_4px.png \
  trash.png

defaultdir = $(pkgdatadir)
